unpackaged/main/default/objects/CareProgram/CareProgram.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>