unpackaged/main/default/objects/CareProgram/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <label>Activity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>