unpackaged/main/default/objects/CareProgram/fields/Care_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Type__c</fullName>
    <label>Care Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Treatment_Application_Program</valueSetName>
    </valueSet>
</CustomField>