unpackaged/main/default/objects/CareProgram/fields/Current_Monthly_Payout__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Payout__c</fullName>
    <description>Current Monthly Payout Amount for the Care Program.</description>
    <label>Current Monthly Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>