unpackaged/main/default/objects/CareProgram/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department Code.</description>
    <label>Department</label>
    <length>200</length>
    <type>Text</type>
</CustomField>