unpackaged/main/default/objects/CareProgram/fields/Flow_State__c.field-meta.xml
<CustomField>
    <fullName>Flow_State__c</fullName>
    <description>Used by Flow only, should not be populated.</description>
    <label>Flow State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>