unpackaged/main/default/objects/CareProgram/fields/Is_First_Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Day_Of_Month__c</fullName>
    <formula>DAY(TODAY())= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is First Day Of Month</label>
    <type>Checkbox</type>
</CustomField>