unpackaged/main/default/objects/CareProgram/fields/Monthly_Payout_Cap__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payout_Cap__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>Monthly Payout for this Care Program. default 10000.</description>
    <label>Monthly Payout Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>