unpackaged/main/default/objects/CareProgram/fields/Monthly_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Utilization__c</fullName>
    <description>how much utilized monthly for the Care Program.</description>
    <label>Monthly Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>