unpackaged/main/default/objects/CareProgram/fields/Patient_Navigator__c.field-meta.xml
<CustomField>
    <fullName>Patient_Navigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies a Patient Navigator Contact from which to draw contact information</description>
    <label>Patient Navigator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Navigation Programs</relationshipLabel>
    <relationshipName>Care_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>