unpackaged/main/default/objects/CareProgram/fields/Patient_Navigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Navigator_Name__c</fullName>
    <formula>Patient_Navigator__r.FirstName &amp; &apos; &apos; &amp;  Patient_Navigator__r.LastName</formula>
    <label>Patient Navigator Name</label>
    <type>Text</type>
</CustomField>