unpackaged/main/default/objects/CareProgram/fields/Patient_Navigator_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_Navigator_State__c</fullName>
    <formula>Patient_Navigator__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Navigator State</label>
    <type>Text</type>
</CustomField>