unpackaged/main/default/objects/CareProgram/fields/Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payout_Amount__c</fullName>
    <description>Payout Amount for this Care Program.</description>
    <label>Payout Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>