unpackaged/main/default/objects/CareProgram/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <description>Remaining Amount from Total Received amount(Donation) , Total Awarded Amount(Payments) for this Care Program.</description>
    <formula>Total_Donation_Amount_del__c -  Total_Payment_Amount_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>