unpackaged/main/default/objects/CareProgram/fields/Remaining_monthly_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_monthly_Balance__c</fullName>
    <description>Remaining Monthly Balance from Monthly Payout Cap, Current Monthly Payout Amount.</description>
    <formula>Monthly_Payout_Cap__c - Current_Monthly_Payout__c</formula>
    <label>Remaining Monthly Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>