unpackaged/main/default/objects/CareProgram/fields/Total_Donation_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Amount_del__c</fullName>
    <description>Sum of Donation Amount for this Care Program.</description>
    <label>Total Donation Amount</label>
    <summarizedField>Donation__c.Amount__c</summarizedField>
    <summaryForeignKey>Donation__c.Care_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>