unpackaged/main/default/objects/CareProgram/fields/Total_Payment_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Amount_del__c</fullName>
    <description>Sum of  Paid Amount for this Care Program.</description>
    <label>Total Payment Amount</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment__c.Care_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>