unpackaged/main/default/objects/CareProgram/listViews/All_CarePrograms.listView-meta.xml
<ListView>
    <fullName>All_CarePrograms</fullName>
    <columns>Name</columns>
    <columns>Care_Program_Type__c</columns>
    <columns>Status</columns>
    <columns>Department__c</columns>
    <columns>CreatedDate</columns>
    <columns>Remaining_monthly_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Care Programs</label>
</ListView>