unpackaged/main/default/objects/CareProgram/listViews/TAP_Care_Programs.listView-meta.xml
<ListView>
    <fullName>TAP_Care_Programs</fullName>
    <columns>Name</columns>
    <columns>Care_Program_Type__c</columns>
    <columns>Department__c</columns>
    <columns>Status</columns>
    <columns>Remaining_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>TAP Care Programs</label>
</ListView>